# real_estate_location_selection

./: Dockerfile  README.md  justfile  main.py  pyproject.toml  requirements.txt  start_land_watch_task.py  start_land_watch_tasks.py  start_land_watch_url_loading.py  start_landwatch_scraping.py  start_scraping.py  start_task.py  start_zillow_scraping.py  start_zillow_tasks.py  start_zillow_url_loading.py
src/pipelines/: pyproject.toml  raw_table_create_queries.txt
src/pipelines/data_download/: copy_postgres.py  copy_postgres_2.py  download_from_google.py
src/pipelines/my_real_estate_project/: 02_run_closest_buildings.sh  06_run_building_summaries.sh  07_run_points_of_study.sh  dbt_project.yml  drop_all_tables.txt  run_all.sh
src/pipelines/my_real_estate_project/models/01_raw/: raw_landwatch.sql  raw_manual_collected_properties.sql  raw_units.sql
src/pipelines/my_real_estate_project/models/02_closest_buildings/: closest_buildings_lookup.sql  stg_units.sql
src/pipelines/my_real_estate_project/models/03_staging/: stg_landwatch.sql  stg_zillow.sql
src/pipelines/my_real_estate_project/models/04_units_history/: units_history_grouped_by_building.sql  units_history_grouped_by_geography.sql
src/pipelines/my_real_estate_project/models/05_prediction_analysis/: building_geographic_analysis.sql  zillow_geographic_analysis.sql
src/pipelines/my_real_estate_project/models/06_property_summaries/: developed_properties_summaries.sql  empty_lot_summaries.sql  points_of_interest.sql  zillow_building_summary.sql
src/pipelines/my_real_estate_project/scripts/: 05_price_prediction_growth.py  time_series_visiualizer.py
src/pipelines/my_real_estate_project/seeds/: manual_collected_properties.csv  property_rejections.csv
src/pipelines/pipelines/: utils.py
src/pipelines/pipelines/data_download/: copy_postgres.py  download_from_google.py
src/pipelines/pipelines/ds_transformations/: price_prediction_growth.py
src/pipelines/real_estate_dbt/: .gitignore  01_run_raw.sh  03_run_staging.sh  04_run_units_history.sh  05_run_prediction_analysis.sh  08_run_main_tables.sh  09_run_general_stats.sh  10_run_business_potential.sh  DAGSTER_README.md  MIGRATION_SUMMARY.md  dagster_quickstart.sh  dbt_project.yml  example_usage.py  overview.md  properties.yml  pyproject.toml  raw_table_create_queries.txt  requirements.txt  setup.py
src/pipelines/real_estate_dbt/macros/: closest_buildings.sql
src/pipelines/real_estate_dbt/models/: schema.yml
src/pipelines/real_estate_dbt/real_estate_dagster/: definitions.py  resources.py
src/pipelines/real_estate_dbt/scripts/: 02_closest_buildings.py  07_precompute_spatial_smoothing.py
src/pipelines/real_estate_dbt/seeds/: property_acceptances.csv  temp.txt
src/pipelines/scaffold-dagster/: README.md  pyproject.toml  setup.cfg  setup.py
src/pipelines/scaffold-dagster/scaffold_dagster/: definitions.py
(+129 files in other folders)
