[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prophet>=1.1.7",
    "scikit-learn>=1.7.0",
    "sktime>=0.38.4",
    "statsmodels>=0.14.5",
]

[project.scripts]
pipelines = "pipelines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
